Fix header z-index

--- a/components/header.scss
+++ b/components/header.scss
@@ -8,7 +8,7 @@
   top: 0;
   transition: box-shadow 200ms 800ms;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 
   .header-background {
     background-color: $colorPink;
